fixing issues with spacing. mostly in gallery-item

--- a/css/styles.css
+++ b/css/styles.css
@@ -104,23 +104,22 @@ video {
 
 .portfolio-gallery {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(900px, 1fr, 1fr));
-  grid-gap: 0.5rem;
-  grid-auto-rows: 900px;
-  flex-flow: row wrap;
-  justify-content: space-around;
+  /*grid-template-columns: repeat(auto-fit, minmax(600px, 1fr, 1fr));
+  */
+  grid-auto-rows: 600px;
   background-color: white;
 }
 
 .gallery-item {
-  height: 50%;
-  width: 2000px;
-  margin-top: 90px;
-  margin-left: auto;
-  margin-right: auto;
+  height: 100%;
+  width: 100%;
+  margin-top: 1px;
+  margin-left: 5px;
+  margin-right: 5px;
   text-align: justify;
   -ms-text-justify: distribute-all-lines;
   text-justify: distribute-all-lines;
+  padding: 5%;
   /*overflow: hidden;
       display: flex;
       align-items: center;
@@ -132,6 +131,7 @@ video {
 
 .gallery-img {
   height: 100%;
+  width: 100%;
   object-fit: contain;
 }
 
